# traffic-simulator

./: CLAUDE.md  README.md  pyproject.toml
src/traffic_simulator/: __init__.py  app.py  constants.py  renderer.py  ui.py  world.py
